--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-cover: 'assets/images/cover2.jpg'
+cover: 'assets/images/tag_cover.jpg'
 class: 'tag-template'
 navigation: True
-logo: 'assets/images/ghost.png'
+logo: 'assets/images/home.png'
 current: tag
 ---
 
