--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 {
     "@context": "http://schema.org",
     "@type": "Website",
-    "publisher": "Finding The Way Home",
+    "publisher": "Programming is Magic",
     "url": "{{ site.baseurl }}",
     "image": "{{ site.baseurl }}assets/images/cover1.jpg",
     "description": "{{ site.description }}"
