get day of week from date

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,9 +11,10 @@
         <li class="nav-javascript {% if page.url contains 'javascript' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/javascript">JavaScript</a></li>
         <li class="nav-speeches {% if page.url contains 'java' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/java">Java</a></li>
 
-        <!-- no C# posts right now
         <li class="nav-fiction {% if page.url contains 'csharp' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/csharp">C#</a></li>
-        -->
+        
+        <li class="nav-fiction {% if page.url contains 'algorithms' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/algorithms">C#</a></li>
+
 
         <li class="nav-author {% if page.current == 'author' %} nav-current{% endif %}" role="presentation">
             <a href="{{ site.baseurl }}author/mc">Author</a>
