--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,7 +13,7 @@
 
         <li class="nav-fiction {% if page.url contains 'csharp' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/csharp">C#</a></li>
         
-        <li class="nav-fiction {% if page.url contains 'algorithms' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/algorithms">C#</a></li>
+        <li class="nav-fiction {% if page.url contains 'algorithms' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/algorithms">Algorithms</a></li>
 
 
         <li class="nav-author {% if page.current == 'author' %} nav-current{% endif %}" role="presentation">
