--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -756,6 +756,10 @@ body.nav-opened .nav {
     background: radial-gradient(ellipse at center,  rgba(0,0,0,0.15) 0%,rgba(0,0,0,0) 70%,rgba(0,0,0,0) 100%);
 }
 
+.home-template .main-header.no-gradient:after {
+    background: none !important;
+}
+
 /* Hide when there's no cover image or on page2+ */
 .no-cover .scroll-down,
 .no-cover.main-header:after,
