--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2063,6 +2063,16 @@ body:not(.post-template) .post-title {
     }
 }
 
+img.emoji {
+	display: inline-block;
+   left: 0;
+   transform: none;
+   width: 20px;
+   height: 20px;
+   vertical-align: text-top;
+   padding: 0;
+   margin: 0;
+}
 
 /* ==========================================================================
    End of file. Animations should be the last thing here. Do not add stuff
