Upgrade to Jekyll 3.7.4

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,22 +4,22 @@
         <span class="hidden">Close</span>
     </a>
     <ul>
-        <li class="nav-home {% if page.current == 'home' %} nav-current{% endif %}" role="presentation">
-            <a href="{{ site.baseurl }}">Home</a>
-        </li>
-        
-        <li class="nav-javascript {% if page.url contains 'javascript' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/javascript">JavaScript</a></li>
-        <li class="nav-speeches {% if page.url contains 'java' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/java">Java</a></li>
+        <li class="nav-home {% if page.current == 'home' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}">Home</a></li>
+        <!-- <li class="nav-about {% if page.current == 'about' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}about">About</a></li> -->
 
-        <li class="nav-fiction {% if page.url contains 'csharp' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/csharp">C#</a></li>
-        
-        <li class="nav-fiction {% if page.url contains 'algorithms' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/algorithms">Algorithms</a></li>
+        {% assign sorted_tags = site.tags | sort_tags | blacklist_tags %}
+        {% for tag in sorted_tags %}
+            {% assign curr_tag = page.url | get_tag %}
+            {% assign tag_name = tag[0] | downcase %}
+            <li class="nav-about {% if curr_tag == tag_name %} nav-current{% endif %}" role="presentation">
+                <a href="{{ site.baseurl }}tag/{{tag[0]}}">
+                    {{ tag_name }} ({{ tag[1].size }})
+                    <!-- {{ curr_tag }} name: {{ tag_name }} -->
+                </a>
+            </li>
+        {% endfor %}
 
-
-        <li class="nav-author {% if page.current == 'author' %} nav-current{% endif %}" role="presentation">
-            <a href="{{ site.baseurl }}author/mc">Author</a>
-        </li>
-    </ul>
+   </ul>
     <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
 </div>
 <span class="nav-cover"></span>
